# refactored-bone-generator

./: README.md
.github/workflows/: backend.yml  frontend.yml
backend/: Cargo.toml  build.rs
backend/.github/workflows/: backend.yml
backend/src/: pca.rs  server.rs
frontend/: pyproject.toml  requirements.txt
frontend/src/: __init__.py  client.py  handlers.py  operators.py  utils.py
frontend/src/proto/: bone_generator.py
proto/: service.proto
