[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
ordered-float = "2.8.0"
tonic = "0.5.2"
prost = "0.8.0"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.5.2"

[[bin]]
name = "server"
path = "src/server.rs"